--- a/logistics/package.json
+++ b/logistics/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.2",
     "express-pino-logger": "^7.0.0",
     "express-validator": "^7.0.1",
+    "geolib": "^3.3.4",
     "get-routes": "^2.1.6",
     "glob": "^10.2.6",
     "joi": "^17.9.2",
