--- a/logistics/package.json
+++ b/logistics/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^14.2.0",
     "ejs": "^3.1.9",
