--- a/logistics/package.json
+++ b/logistics/package.json
@@ -47,7 +47,9 @@
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.2",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.3",
+    "pg": "^8.11.5",
     "pino": "^7.6.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
@@ -73,7 +75,9 @@
     "@types/node": "^17.0.10",
     "@types/node-cache": "^4.2.5",
     "@types/node-cron": "^3.0.8",
+    "@types/node-schedule": "^2.1.0",
     "@types/nodemailer": "^6.4.8",
+    "@types/pg": "^8.11.6",
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
